# tree-sitter-sgf

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_sgf/: __init__.py  __init__.pyi  binding.c
bindings/rust/: build.rs  lib.rs
docs/: ARCHITECTURE.md  development.md  release.md
editors/nvim/: init.lua  smoke.lua
queries/sgf/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: errors.txt  games.txt  syntax.txt
