[package]
name = "tree-sitter-sgf"
description = "Tree-sitter grammar for Smart Game Format (SGF)."
version = "0.1.0"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "sgf"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/lykahb/tree-sitter-sgf"
edition = "2021"
autoexamples = false
build = "bindings/rust/build.rs"
include = [
  "/LICENSE",
  "/README.md",
  "/bindings/rust/**",
  "/grammar.js",
  "/queries/**",
  "/src/**",
  "/tree-sitter.json",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1"

[dev-dependencies]
tree-sitter = "0.26"
