[build-system]
requires = ["setuptools>=70.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-sgf"
description = "Tree-sitter grammar for Smart Game Format (SGF)."
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "sgf"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
requires-python = ">=3.9"
license = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/lykahb/tree-sitter-sgf"

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
